using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string climbing = "climbing";
    internal static string inMovement = "inMovement"; 
    internal static string running = "running"; 
    internal static string surfaced = "surfaced";
    internal static string yVelocity = "yVelocity"; 
    internal static string jump = "jump"; 
    internal static string onCeiling = "onCeiling";
    internal static string onWall = "onWall";
    internal static string attack = "attack";
    internal static string allowMovement = "allowMovement";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hit = "hit";
    internal static string haltVelocity = "haltVelocity";
    internal static string distanceAttack = "distanceAttack";
    internal static string playerNearby = "playerNearby";
    internal static string playerEnter = "playerEnter";
    internal static string airAttack = "airAttack";
    internal static string wormTrigger = "wormTrigger";
}
